// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select query tests select non cat pets with optional visit 1`] = `
"SELECT
\\"pet\\".\\"id\\" as \\"id\\",
\\"type\\".\\"name\\" as \\"type\\",
\\"pet\\".\\"name\\" as \\"name\\",
\\"pet\\".\\"birth_date\\" as \\"birthDate\\",
\\"pet\\".\\"owner_id\\" as \\"ownerId\\",
\\"pet\\".\\"type_id\\" as \\"typeId\\",
\\"visit\\".\\"visit_date\\" as \\"visitDate\\",
\\"visit\\".\\"vet_id\\" as \\"vetId\\"
FROM
( ( \\"pet\\" JOIN \\"type\\" ON \\"type\\".\\"id\\" = \\"pet\\".\\"type_id\\" ) LEFT JOIN \\"visit\\" ON \\"pet\\".\\"id\\" = \\"visit\\".\\"pet_id\\" )
WHERE NOT (\\"type\\".\\"name\\" = $1)"
`;

exports[`Select query tests select non cat pets with optional visit 2`] = `
Array [
  anonymous {
    "birthDate": 1997-02-24T06:00:00.000Z,
    "id": 10,
    "name": "Mulligan",
    "ownerId": 8,
    "type": "dog",
    "typeId": 2,
    "vetId": null,
    "visitDate": null,
  },
  anonymous {
    "birthDate": 2000-01-20T06:00:00.000Z,
    "id": 6,
    "name": "George",
    "ownerId": 5,
    "type": "snake",
    "typeId": 4,
    "vetId": null,
    "visitDate": null,
  },
  anonymous {
    "birthDate": 2000-03-09T06:00:00.000Z,
    "id": 11,
    "name": "Freddy",
    "ownerId": 9,
    "type": "bird",
    "typeId": 5,
    "vetId": null,
    "visitDate": null,
  },
  anonymous {
    "birthDate": 2000-06-24T05:00:00.000Z,
    "id": 12,
    "name": "Lucky",
    "ownerId": 10,
    "type": "dog",
    "typeId": 2,
    "vetId": null,
    "visitDate": null,
  },
  anonymous {
    "birthDate": 2002-08-06T05:00:00.000Z,
    "id": 2,
    "name": "Basil",
    "ownerId": 2,
    "type": "hamster",
    "typeId": 6,
    "vetId": null,
    "visitDate": null,
  },
  anonymous {
    "birthDate": 2000-11-30T06:00:00.000Z,
    "id": 5,
    "name": "Iggy",
    "ownerId": 4,
    "type": "lizard",
    "typeId": 3,
    "vetId": null,
    "visitDate": null,
  },
  anonymous {
    "birthDate": 2000-03-07T06:00:00.000Z,
    "id": 4,
    "name": "Jewel",
    "ownerId": 3,
    "type": "dog",
    "typeId": 2,
    "vetId": null,
    "visitDate": null,
  },
  anonymous {
    "birthDate": 2001-04-17T05:00:00.000Z,
    "id": 3,
    "name": "Rosy",
    "ownerId": 3,
    "type": "dog",
    "typeId": 2,
    "vetId": null,
    "visitDate": null,
  },
  anonymous {
    "birthDate": 1999-08-06T05:00:00.000Z,
    "id": 9,
    "name": "Lucky",
    "ownerId": 7,
    "type": "bird",
    "typeId": 5,
    "vetId": null,
    "visitDate": null,
  },
]
`;

exports[`Select query tests select pets hardcoded live in madison or McFarland 1`] = `
"SELECT
\\"pet\\".\\"id\\" as \\"id\\",
\\"pet\\".\\"name\\" as \\"name\\",
\\"pet\\".\\"birth_date\\" as \\"birthDate\\",
\\"pet\\".\\"owner_id\\" as \\"ownerId\\",
\\"pet\\".\\"type_id\\" as \\"typeId\\"
FROM
\\"pet\\"
WHERE \\"pet\\".\\"owner_id\\" = ANY (SELECT
\\"owner\\".\\"id\\" as \\"id\\"
FROM
\\"owner\\"
WHERE \\"owner\\".\\"city\\" = ANY ($1))"
`;

exports[`Select query tests select pets hardcoded live in madison or McFarland 2`] = `
Array [
  anonymous {
    "birthDate": 2000-09-07T05:00:00.000Z,
    "id": 1,
    "name": "Leo",
    "ownerId": 1,
    "typeId": 1,
  },
  anonymous {
    "birthDate": 2001-04-17T05:00:00.000Z,
    "id": 3,
    "name": "Rosy",
    "ownerId": 3,
    "typeId": 2,
  },
  anonymous {
    "birthDate": 2000-03-07T06:00:00.000Z,
    "id": 4,
    "name": "Jewel",
    "ownerId": 3,
    "typeId": 2,
  },
  anonymous {
    "birthDate": 2000-01-20T06:00:00.000Z,
    "id": 6,
    "name": "George",
    "ownerId": 5,
    "typeId": 4,
  },
  anonymous {
    "birthDate": 1997-02-24T06:00:00.000Z,
    "id": 10,
    "name": "Mulligan",
    "ownerId": 8,
    "typeId": 2,
  },
  anonymous {
    "birthDate": 2000-03-09T06:00:00.000Z,
    "id": 11,
    "name": "Freddy",
    "ownerId": 9,
    "typeId": 5,
  },
]
`;

exports[`Select query tests select pets seen dr Ortega 1`] = `
"SELECT
\\"pet\\".\\"id\\" as \\"id\\",
\\"pet\\".\\"name\\" as \\"name\\",
\\"pet\\".\\"birth_date\\" as \\"birthDate\\",
\\"pet\\".\\"owner_id\\" as \\"ownerId\\",
\\"pet\\".\\"type_id\\" as \\"typeId\\"
FROM
( ( \\"pet\\" JOIN \\"visit\\" ON \\"pet\\".\\"id\\" = \\"visit\\".\\"pet_id\\" ) JOIN \\"vet\\" ON \\"vet\\".\\"id\\" = \\"visit\\".\\"vet_id\\" )
WHERE \\"vet\\".\\"last_name\\" = $1"
`;

exports[`Select query tests select pets seen dr Ortega 2`] = `
Array [
  anonymous {
    "birthDate": 1995-09-04T05:00:00.000Z,
    "id": 8,
    "name": "Max",
    "ownerId": 6,
    "typeId": 1,
  },
  anonymous {
    "birthDate": 1995-09-04T05:00:00.000Z,
    "id": 7,
    "name": "Samantha",
    "ownerId": 6,
    "typeId": 1,
  },
]
`;

exports[`Select query tests select vets with no specialty 1`] = `
"SELECT
\\"vet\\".\\"id\\" as \\"id\\",
\\"vet\\".\\"first_name\\" as \\"firstName\\",
\\"vet\\".\\"last_name\\" as \\"lastName\\",
\\"specialty\\".\\"name\\" as \\"name\\"
FROM
( ( \\"vet\\" LEFT JOIN \\"vet_specialty\\" ON \\"vet_specialty\\".\\"vet_id\\" = \\"vet\\".\\"id\\" ) LEFT JOIN \\"specialty\\" ON \\"specialty\\".\\"id\\" = \\"vet_specialty\\".\\"specialty_id\\" )
WHERE \\"vet_specialty\\".\\"specialty_id\\" IS NULL"
`;

exports[`Select query tests select vets with no specialty 2`] = `
Array [
  anonymous {
    "firstName": "Sharon",
    "id": 6,
    "lastName": "Jenkins",
    "name": null,
  },
  anonymous {
    "firstName": "James",
    "id": 1,
    "lastName": "Carter",
    "name": null,
  },
]
`;

exports[`Select query tests select vets with their specialties 1`] = `
"SELECT
\\"vet\\".\\"id\\" as \\"id\\",
\\"vet\\".\\"first_name\\" as \\"firstName\\",
\\"vet\\".\\"last_name\\" as \\"lastName\\",
\\"specialty\\".\\"name\\" as \\"name\\"
FROM
( ( \\"vet\\" LEFT JOIN \\"vet_specialty\\" ON \\"vet_specialty\\".\\"vet_id\\" = \\"vet\\".\\"id\\" ) LEFT JOIN \\"specialty\\" ON \\"specialty\\".\\"id\\" = \\"vet_specialty\\".\\"specialty_id\\" )
WHERE \\"vet_specialty\\".\\"specialty_id\\" IS NOT NULL"
`;

exports[`Select query tests select vets with their specialties 2`] = `
Array [
  anonymous {
    "firstName": "Helen",
    "id": 2,
    "lastName": "Leary",
    "name": "radiology",
  },
  anonymous {
    "firstName": "Linda",
    "id": 3,
    "lastName": "Douglas",
    "name": "surgery",
  },
  anonymous {
    "firstName": "Linda",
    "id": 3,
    "lastName": "Douglas",
    "name": "dentistry",
  },
  anonymous {
    "firstName": "Rafael",
    "id": 4,
    "lastName": "Ortega",
    "name": "surgery",
  },
  anonymous {
    "firstName": "Henry",
    "id": 5,
    "lastName": "Stevens",
    "name": "radiology",
  },
]
`;

exports[`Select query tests select with subquery pets live in madison 1`] = `
"SELECT
\\"pet\\".\\"id\\" as \\"id\\",
\\"pet\\".\\"name\\" as \\"name\\",
\\"pet\\".\\"birth_date\\" as \\"birthDate\\",
\\"pet\\".\\"owner_id\\" as \\"ownerId\\",
\\"pet\\".\\"type_id\\" as \\"typeId\\"
FROM
\\"pet\\"
WHERE \\"pet\\".\\"owner_id\\" = ANY (SELECT
\\"owner\\".\\"id\\" as \\"id\\"
FROM
\\"owner\\"
WHERE \\"owner\\".\\"city\\" = $1)"
`;

exports[`Select query tests select with subquery pets live in madison 2`] = `
Array [
  anonymous {
    "birthDate": 2000-09-07T05:00:00.000Z,
    "id": 1,
    "name": "Leo",
    "ownerId": 1,
    "typeId": 1,
  },
  anonymous {
    "birthDate": 2000-01-20T06:00:00.000Z,
    "id": 6,
    "name": "George",
    "ownerId": 5,
    "typeId": 4,
  },
  anonymous {
    "birthDate": 1997-02-24T06:00:00.000Z,
    "id": 10,
    "name": "Mulligan",
    "ownerId": 8,
    "typeId": 2,
  },
  anonymous {
    "birthDate": 2000-03-09T06:00:00.000Z,
    "id": 11,
    "name": "Freddy",
    "ownerId": 9,
    "typeId": 5,
  },
]
`;

exports[`Select query tests with clause cats had visit with surgeon 1`] = `
"WITH \\"myWith\\" AS (SELECT
\\"vet\\".\\"id\\" as \\"id\\",
\\"vet\\".\\"first_name\\" as \\"firstName\\",
\\"vet\\".\\"last_name\\" as \\"lastName\\",
\\"specialty\\".\\"name\\" as \\"name\\"
FROM
( ( \\"vet\\" LEFT JOIN \\"vet_specialty\\" ON \\"vet_specialty\\".\\"vet_id\\" = \\"vet\\".\\"id\\" ) LEFT JOIN \\"specialty\\" ON \\"specialty\\".\\"id\\" = \\"vet_specialty\\".\\"specialty_id\\" )
WHERE \\"specialty\\".\\"name\\" = $1)
SELECT
\\"myWith\\".\\"id\\" as \\"id\\",
\\"myWith\\".\\"lastName\\" as \\"lastName\\",
\\"visit\\".\\"pet_id\\" as \\"petId\\",
\\"pet\\".\\"name\\" as \\"name\\"
FROM
( \\"myWith\\" LEFT JOIN ( \\"visit\\" JOIN ( \\"pet\\" JOIN \\"type\\" ON \\"pet\\".\\"type_id\\" = \\"type\\".\\"id\\" ) ON \\"visit\\".\\"pet_id\\" = \\"pet\\".\\"id\\" ) ON \\"visit\\".\\"vet_id\\" = \\"myWith\\".\\"id\\" )
WHERE (NOT (\\"myWith\\".\\"lastName\\" = $2)) AND (\\"type\\".\\"name\\" = $3)"
`;

exports[`Select query tests with clause cats had visit with surgeon 2`] = `
Array [
  anonymous {
    "id": 4,
    "lastName": "Ortega",
    "name": "Max",
    "petId": 8,
  },
  anonymous {
    "id": 4,
    "lastName": "Ortega",
    "name": "Samantha",
    "petId": 7,
  },
]
`;

exports[`Select query tests with clause query 1`] = `
"WITH \\"myWith\\" AS (SELECT
\\"vet\\".\\"id\\" as \\"id\\",
\\"vet\\".\\"first_name\\" as \\"firstName\\",
\\"vet\\".\\"last_name\\" as \\"lastName\\",
\\"specialty\\".\\"name\\" as \\"name\\"
FROM
( ( \\"vet\\" LEFT JOIN \\"vet_specialty\\" ON \\"vet_specialty\\".\\"vet_id\\" = \\"vet\\".\\"id\\" ) LEFT JOIN \\"specialty\\" ON \\"specialty\\".\\"id\\" = \\"vet_specialty\\".\\"specialty_id\\" )
WHERE \\"vet_specialty\\".\\"specialty_id\\" IS NOT NULL)
SELECT
\\"myWith\\".\\"id\\" as \\"id\\",
\\"myWith\\".\\"lastName\\" as \\"lastName\\",
\\"visit\\".\\"pet_id\\" as \\"petId\\"
FROM
( \\"myWith\\" JOIN \\"visit\\" ON \\"visit\\".\\"vet_id\\" = \\"myWith\\".\\"id\\" )"
`;

exports[`Select query tests with clause query 2`] = `
Array [
  anonymous {
    "id": 2,
    "lastName": "Leary",
    "petId": 8,
  },
  anonymous {
    "id": 4,
    "lastName": "Ortega",
    "petId": 8,
  },
  anonymous {
    "id": 4,
    "lastName": "Ortega",
    "petId": 7,
  },
]
`;
